--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "cd client && npm start",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
     "build": "cd client && npm run build",
-    "start:prod": "node index.js",
+    "start:prod": "NODE_ENV=production node index.js",
     "create-admin": "cd server && node scripts/createAdminUser.js",
     "create-test-users": "cd server && node scripts/createTestUsers.js"
   },
