--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
