--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
+    "concurrently": "^8.2.2",
+    "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0"
   }
-} 
+}
