--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "concurrently": "^8.2.2",
+    "node-cron": "^3.0.3",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0"
   }
