--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^8.2.2",
     "node-cron": "^3.0.3",
     "react-bootstrap": "^2.10.9",
-    "react-chartjs-2": "^5.3.0"
+    "react-chartjs-2": "^5.3.0",
+    "recharts": "^2.15.3"
   }
 }
