--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@mui/icons-material": "^6.4.7",
+    "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.1",
     "@testing-library/dom": "^10.4.0",
@@ -19,6 +21,7 @@
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
     "date-fns": "^2.29.3",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
