Update package dependencies in package.json for compatibility and stability
- Modified the install-all script to include --legacy-peer-deps for better dependency resolution.
- Downgraded MUI dependencies in client package.json to ensure compatibility with existing codebase.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install",
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install --legacy-peer-deps",
     "build": "cd client && npm run build",
     "start:prod": "NODE_ENV=production node index.js",
     "create-admin": "cd server && node scripts/createAdminUser.js",
