--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,9 @@
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/lab": "^6.4.7",
-    "@mui/material": "^6.4.7",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.155",
+    "@mui/material": "^5.15.0",
     "@mui/x-date-pickers": "^6.18.7",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.5",
