--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.2",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
