--- a/server/.env-example
+++ b/server/.env-example
@@ -7,13 +7,13 @@ MONGODB_URI=mongodb://localhost:27017/sports
 # JWT Secret
 JWT_SECRET=your_jwt_secret_here
 
-# Email Settings (Gmail SMTP)
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-gmail-app-password
-EMAIL_FROM="Sports Management <your-email@gmail.com>"
+# Email Settings (Resend API)
+RESEND_API_KEY=your_resend_api_key_here
+EMAIL_FROM="Sports Management <onboarding@resend.dev>"
 
-# To get a Gmail app password:
-# 1. Enable 2-step verification on your Google account
-# 2. Go to https://myaccount.google.com/apppasswords
-# 3. Generate an app password for "Mail" and "Other (Custom name)"
-# 4. Use that 16-character password as EMAIL_PASS 
+# To get a Resend API key:
+# 1. Sign up at https://resend.com with sairmub@gmail.com
+# 2. Create an API key in your dashboard
+# 3. Use that API key as RESEND_API_KEY
+# 4. For testing, you can only send emails to sairmub@gmail.com
+# 5. For production, verify your domain to send to any email address 
