--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "resend": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
