Update email configurations and test scripts to use new sender address
- Changed the default sender email address in `.env-example` and updated related test scripts to reflect the new email address for sending test emails.
- Updated email sending logic in various test files to use 'Sports Management System <sms@ultrasnorthlebanon.com>' and 'System.ultrasnorthlebanon@gmail.com' as the recipient.
- Enhanced documentation in `.env-example` to guide users on testing and production email configurations.

--- a/server/.env-example
+++ b/server/.env-example
@@ -9,11 +9,11 @@ JWT_SECRET=your_jwt_secret_here
 
 # Email Settings (Resend API)
 RESEND_API_KEY=your_resend_api_key_here
-EMAIL_FROM="Sports Management <onboarding@resend.dev>"
+EMAIL_FROM="Sports Management <sms@ultrasnorthlebanon.com>"
 
 # To get a Resend API key:
-# 1. Sign up at https://resend.com with sairmub@gmail.com
+# 1. Sign up at https://resend.com with System.ultrasnorthlebanon@gmail.com
 # 2. Create an API key in your dashboard
 # 3. Use that API key as RESEND_API_KEY
-# 4. For testing, you can only send emails to sairmub@gmail.com
-# 5. For production, verify your domain to send to any email address 
+# 4. For testing, you can only send emails to System.ultrasnorthlebanon@gmail.com or verified domains
+# 5. For production, verify your domain "ultrasnorthlebanon.com" to send to any email address 
