Enhance date handling in booking and availability controllers to ensure local time representation
- Updated date parsing in bookingController, courtController, and guestBookingController to treat dates as local time, preventing timezone discrepancies.
- Improved comments for clarity on local time handling in date-related logic.
- Enhanced availability checks to ensure accurate scheduling and user experience across the application.

--- a/server/.env-example
+++ b/server/.env-example
@@ -7,6 +7,11 @@ MONGODB_URI=mongodb://localhost:27017/sports
 # JWT Secret
 JWT_SECRET=your_jwt_secret_here
 
+# Time Settings
+# Note: This application treats all times as local to wherever it's running.
+# Court availability slots and bookings will appear at their stated times
+# regardless of timezone, e.g., 8am-6pm will be 8am-6pm in whatever timezone the server is used.
+
 # Email Settings (Resend API)
 RESEND_API_KEY=your_resend_api_key_here
 EMAIL_FROM="Sports Management <sms@ultrasnorthlebanon.com>"
