--- a/server/.env-example
+++ b/server/.env-example
@@ -2,7 +2,7 @@
 PORT=5000
 
 # MongoDB Connection
-MONGODB_URI=mongodb://localhost:27017/sports
+MONGODB_URI=MONGODB_URI=mongodb://10.0.1.1:27017/sports
 
 # JWT Secret
 JWT_SECRET=your_jwt_secret_here
